- Изменения в дто - Правки шаблонов - Исправлена проблема с JWT фильтром для главной страницы