@@ -2,13 +2,11 @@ package com.byteforge.byteforge.services;
 
 import com.byteforge.byteforge.dto.BrandDto;
 import com.byteforge.byteforge.repositories.BrandRepository;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,9 +16,14 @@ public class BrandService {
     @Transactional(readOnly = true)
     public List<BrandDto> getAllBrands() {
         return brandRepository.findAll().stream()
-                .map(BrandDto::from)
-                .collect(Collectors.toList());
+                .map(brand -> new BrandDto(
+                        brand.getId(),
+                        brand.getName(),
+                        brand.getLogoUrl()
+                ))
+                .toList();
     }
+    
     // Получить бренды по категории (с преобразованием в DTO)
     @Transactional(readOnly = true)
     public List<BrandDto> getBrandsByCategory(Integer categoryId) {
@@ -29,8 +32,12 @@ public class BrandService {
         }
 
         return brandRepository.findByProductsCategoryId(categoryId).stream()
-                .map(BrandDto::from)
-                .collect(Collectors.toList());
+                .map(brand -> new BrandDto(
+                        brand.getId(),
+                        brand.getName(),
+                        brand.getLogoUrl()
+                ))
+                .toList();
     }
 }
 
