@@ -6,7 +6,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,8 +15,12 @@ public class CategoryService {
 
     public List<CategoryDto> getAllCategories() {
         return categoryRepository.findAll().stream()
-                .map(CategoryDto::from)
-                .collect(Collectors.toList());
+                .map(category -> new CategoryDto(
+                        category.getId(),
+                        category.getName(),
+                        category.getSlug()
+                ))
+                .toList();
     }
 }
 
